apply plugin: "com.android.library"
apply plugin: "kotlin-android"

android {
    compileSdkVersion safeExtGet("compileSdkVersion", 36)

    defaultConfig {
        minSdkVersion safeExtGet("minSdkVersion", 21)
        targetSdkVersion safeExtGet("targetSdkVersion", 36)
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = "1.8"
    }
}

repositories {
    google()
    mavenCentral()
}

dependencies {
    implementation "com.facebook.react:react-android"
    
    // dnsjava for DNS operations on older Android versions
    implementation "dnsjava:dnsjava:3.5.2"
    
    // For modern Android DNS resolver (API 29+)
    if (project.android.compileSdkVersion >= 29) {
        implementation "androidx.annotation:annotation:1.6.0"
    }
}

def safeExtGet(prop, fallback) {
    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
}
